# papero-demo

./: .gitignore  CNAME  README.md  index.html  tulldeklaration.html
cli/: pyproject.toml
cli/src/: papero_cli.py
cli/src/core/: config.py
data/: t2.json  tulldeklaration_bulk.json
templates/: index.html  tulldeklaration-with-data.html  tulldeklaration.html
