[tool.poetry]
name = "papero-cli"
version = "0.1.0"
description = "Papero CLI"
authors = ["Alexander Hultnér <ahultner@gmail.com>"]
packages = [
    { include = "*", from="src" },
]

[tool.poetry.scripts]
papero = 'papero_cli:cli'

[tool.poetry.dependencies]
python = "^3.9"
bpython = "^0.20.1"
requests = "^2.25.0"
typer = "^0.3.2"
rich = "^9.11.1"
httpx = "^0.16.1"
pydantic = "^1.7.3"
unsync = "^1.3"
shellingham = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
